[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.2.0"
authors = [{ name = "Tanishq Kumar" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Async tree-based speculative decoding research engine"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.8.0",
    "triton==3.4.0 ; sys_platform == \"linux\"",
    "transformers==4.57.1",
    "xxhash==3.5.0",
    "numpy==2.3.3",
    "safetensors==0.6.2",
    "tqdm==4.67.1",
    "flashinfer-python==0.5.2 ; sys_platform == \"linux\"",
    "sgl-kernel==0.3.17.post1 ; sys_platform == \"linux\"",
    "nvidia-cutlass-dsl==4.2.1 ; sys_platform == \"linux\"",
    "wandb==0.22.0",
    "hf_transfer",
    "tiktoken",
]

[project.optional-dependencies]
scripts = [
    "datasets",
    "huggingface_hub",
]

[project.urls]
Homepage="https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
